<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_gravity="bottom|center_horizontal"
	android:gravity="center_horizontal"
	tools:ignore="UnusedAttribute,SmallSp"
	android:orientation="vertical"
	tools:context=".login_signup.LoginFragment">

	<androidx.cardview.widget.CardView
		android:layout_width="match_parent"
		android:layout_gravity="center_horizontal|bottom"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:background="@color/white">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="24dp"
			android:layout_marginVertical="40dp"
			android:orientation="vertical">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="@font/montserrat_medium"
				android:text="@string/login"
				android:textColor="@color/mek_grey"
				android:textSize="14sp"
				android:textStyle="bold" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				android:text="@string/enter_employee_id_and_password_to_submit"
				android:textColor="@color/mek_grey"
				android:textSize="12sp" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:fontFamily="@font/gotham_book"
				android:labelFor="@id/emp_id"
				android:paddingHorizontal="4dp"
				android:paddingTop="28dp"
				android:text="@string/enter_your_employee_id"
				android:textColor="@color/offwhite"
				android:textSize="10sp" />

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/emp_id"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:autofillHints="username"
				android:fontFamily="@font/gotham_medium1"
				android:inputType="number"
				android:maxLength="10"
				android:textSize="14sp"
				android:textStyle="bold" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:fontFamily="@font/gotham_book"
				android:labelFor="@id/emp_psw"
				android:paddingHorizontal="8dp"
				android:paddingTop="24dp"
				android:text="@string/password"
				android:textColor="@color/light_grey"
				android:textSize="10sp" />

			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				app:hintTextAppearance="@style/TextLabel"
				app:passwordToggleEnabled="true"
				android:layout_height="wrap_content">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/emp_psw"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textSize="14sp"
					android:fontFamily="@font/gotham_medium1"
					android:textColor="@color/black"
					android:inputType="textPassword"/>
			</com.google.android.material.textfield.TextInputLayout>

			<TextView
				android:id="@+id/tv_forgot_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:fontFamily="@font/gotham_book"
				android:paddingTop="16dp"
				android:text="@string/forgot_password"
				android:textAlignment="viewEnd"
				android:textColor="#FFAC30"
				android:textSize="12sp" />

			<Button
				android:id="@+id/btn_login"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="24dp"
				android:background="@drawable/red_button"
				android:fontFamily="@font/montserrat_medium"
				android:text="@string/submit"
				android:textAllCaps="false"
				android:textColor="@color/white"
				android:textSize="16sp" />

		</LinearLayout>

	</androidx.cardview.widget.CardView>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginTop="16dp"
		android:layout_gravity="bottom"
		android:gravity="bottom"
		android:layout_marginBottom="0dp"
		android:orientation="vertical">

		<TextView
			android:id="@+id/btv_faqs"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="12sp"
			android:layout_marginBottom="5dp"
			android:fontFamily="@font/montserrat_semi_bold"
			android:drawableStart="@drawable/ic_faqs"
			android:gravity="start"
			android:clickable="true"
			android:focusable="true"
			android:layout_marginHorizontal="8dp"
			android:padding="12dp"
			android:drawablePadding="16dp"
			android:textColor="@color/mek_grey"
			android:layout_gravity="center_horizontal"
			android:drawableEnd="@drawable/ic_right_arrow"
			style="@style/Widget.AppCompat.Button.Borderless"
			android:textAllCaps="false"
			android:text="@string/faq_s" />

		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="@color/line_colour" />

		<TextView
			android:id="@+id/btv_feedback"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="12sp"
			android:padding="12dp"
			android:drawablePadding="16dp"
			android:clickable="true"
			android:focusable="true"
			android:layout_marginTop="5dp"
			android:layout_gravity="center_horizontal"
			android:layout_margin="8dp"
			android:fontFamily="@font/montserrat_semi_bold"
			android:drawableStart="@drawable/ic_feedback"
			android:gravity="start"
			android:textColor="@color/mek_grey"
			android:drawableEnd="@drawable/ic_right_arrow"
			style="@style/Widget.AppCompat.Button.Borderless"
			android:textAllCaps="false"
			android:text="@string/send_feedback" />
	</LinearLayout>

</LinearLayout>